--- a/packages/themes/src/reset.css
+++ b/packages/themes/src/reset.css
@@ -29,6 +29,10 @@
     border-style: solid;
     border-color: var(--scalar-border-color);
 
+    outline-width: 1px;
+    outline-style: none;
+    outline-color: var(--scalar-color-accent);
+
     font-family: inherit;
     font-feature-settings: inherit;
     font-variation-settings: inherit;
@@ -73,12 +77,6 @@
   textarea {
     border-radius: var(--scalar-radius);
     border-width: 1px;
-
-    /** @see https://tailwindcss.com/docs/ring-width#focus-rings */
-    &:focus-visible {
-      box-shadow: var(--tw-ring-inset) 0 0 0
-        calc(1px + var(--tw-ring-offset-width)) var(--tw-ring-color);
-    }
   }
 
   input::placeholder,
@@ -87,15 +85,19 @@
     color: var(--scalar-color-3);
     font-family: var(--scalar-font);
   }
+
+  input[type='search']::-webkit-search-cancel-button,
+  input[type='search']::-webkit-search-decoration {
+    appearance: none;
+  }
   /** Remove yellow/blue autofill indicator */
   input:-webkit-autofill {
     background-clip: text !important;
   }
 
-  /** Custom outline style for focus visible */
+  /** Add outline for focus visible */
   :focus-visible {
-    outline: 1px solid var(--scalar-color-accent);
-    outline-offset: 1px;
+    outline-style: solid;
   }
 
   /** Set the default cursor for buttons. */
